# Gmsh_api_mesh_builder

./: CMakeLists.txt  TGeometryBuilder.cpp  TGeometryBuilder.h  TGmshWellboreBuilder.cpp  TGmshWellboreBuilder.h  main.cpp  producer_trajectory.txt
mathematica_notebooks/: DFN_Geometry.nb  Ellipse_Geometry.nb  Ellipse_Geometry_II.nb  dfn.txt  two_fracs.txt
